--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,47 @@
-.App {
-  text-align: center;
+header {
+  height: 100px;
+  background: #ab2a22;
+  display: flex;
+  align-items: center;
+  font-size: 24pt;
+  font-weight: 600;
+  color: white;
+  padding-left: 10vw;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+form {
+  border: 1px solid blue;
+  background: #63d987;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  width: 35vw;
+  height: 75vh;
+  margin-left: 8vw;
 }
 
-.App-link {
-  color: #61dafb;
+button {
+  width: 6vw;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+img {
+  max-width: 150px;
+  max-height: 150px;
 }
+
+.dashboard {
+  border: solid 1px red;
+  width: 40vw;
+  margin-left: 9vw;
+}
+
+.product{
+  border: solid 1px red;
+  height: 30vh;
+}
+
+main {
+  border: 1px solid red;
+  display: flex;
+  margin-top: 10vh;
+}
+
